k8s/administrative.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: administrative-service
  labels:
    app: administrative-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: administrative-service
  template:
    metadata:
      labels:
        app: administrative-service
    spec:
      containers:
        - name: administrative-service
          image: imepac/administrative-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: administrative-service
spec:
  selector:
    app: administrative-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
