k8s/appointment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: imepac/appointment-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
