k8s/attendance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance-service
  labels:
    app: attendance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attendance-service
  template:
    metadata:
      labels:
        app: attendance-service
    spec:
      containers:
        - name: attendance-service
          image: imepac/attendance-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: attendance-service
spec:
  selector:
    app: attendance-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
